[package]
name = "rusty-ppm"
version = "0.1.0"
edition = "2021"
description = "A simple PPM image renderer"
keywords = [
    "ppm",
    "renderer",
    "image",
    "rendering"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
